Updated deur filename

--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ img {
 }
 
 .hero .container {
-    background: url('Deur\ \(1\).jpg') no-repeat;
+    background: url('Deur.jpg') no-repeat;
     background-size: contain;
     background-position: center bottom;
     height: 550px;
